# zargo

./: .gitignore  README.md  main.py  pyproject.toml
zargo/: __init__.py  argo_data_decoder.py  argo_message_decoder.py  argo_wire_type_decoder.py
zargo/struct/: argo_block.py  argo_block_data.py
zargo/utils/: block_reader.py  data_reader.py  jid.py
zargo/wiretype/: error.py
